--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -1,8 +1,5 @@
 .form-elements {
   &__wrap {
-    &_top {
-      height: 652px;
-    }
 
     &_upper-middle {
       height: 240px;
@@ -23,14 +20,23 @@
     }
   }
 
-  &__column {
+  &__column,
+  &__block {
     display: grid;
+    overflow: hidden;
+  }
+
+  &__column {
     grid-gap: 40px;
   }
 
   &__block {
-    display: grid;
     grid-gap: 20px;
+  }
+
+  &__element {
+    min-width: 0;
+    min-height: 0;
   }
 }
 
