Minor changes: shadow is header-landing default style attribute

--- a/src/components/headers/landing/header-landing.pug
+++ b/src/components/headers/landing/header-landing.pug
@@ -3,7 +3,7 @@ include ../../buttons/mean-oval/mean-oval.pug
 include ../../navigation-links/navigation-links.pug
 
 mixin headerLanding( item )
-  .header-landing.additional_shadow
+  .header-landing
     .header-landing__sections_left
       .header-landing__logo
         +logotype('colorful')
