--- a/src/components/headers/landing/header-landing.scss
+++ b/src/components/headers/landing/header-landing.scss
@@ -8,6 +8,7 @@
   height: 70px;
   padding-inline: 140px;
   background-color: white;
+  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 
   &__sections_right,
   &__user-bar {
