--- a/src/pages/headers-n-footers.pug
+++ b/src/pages/headers-n-footers.pug
@@ -10,6 +10,6 @@ body.ui-kit__body.bgcolor_whisper
       +headerLanding({ authorized: false })
       +headerLanding({ authorized: true })
       +footer()
-
+      +footer()
   footer.ui-kit__footer
     
