--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -8,6 +8,7 @@
   &__lower-section {
     padding-inline: 140px;
   }
+
   &__upper-section {
     display: grid;
     align-items: center;
@@ -16,6 +17,7 @@
 
     &_content {
       display: grid;
+      align-items: start;
       grid-template-columns: 260px repeat(3, 150px) 260px;
       grid-gap: 40px;
       height: 170px;
@@ -32,7 +34,7 @@
     color: rgba($valhalla, .75)
   }
 
-  &__content-container {
+  &__content_start-end {
     display: grid;
     grid-gap: 20px;
   }
