--- a/src/pages/headers-n-footers.pug
+++ b/src/pages/headers-n-footers.pug
@@ -9,7 +9,7 @@ body.ui-kit__body.bgcolor_whisper
     .headers-n-footers
       +headerLanding({ authorized: false })
       +headerLanding({ authorized: true })
-      +footer()
-      +footer()
+      +footer({ type: 'default' })
+      +footer({ type: 'mobile' })
   footer.ui-kit__footer
     
