--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,8 +1,15 @@
 @import "@variables";
 
 .footer {
-  width: 100%;
   background-color: white;
+
+  &_default {
+    width: 100%;
+  }
+
+  &_mobile {
+    width: 768px;
+  }
 
   &__upper-section,
   &__lower-section {
@@ -26,6 +33,18 @@
 
   &__lower-section {
     height: 70px;
+  }
+
+  &__central-section {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    height: 367px;
+
+    & > span {
+      margin-block: 20px 25px;
+    }
   }
 
   &__common-text {
