--- a/src/components/headers/landing/header-landing.scss
+++ b/src/components/headers/landing/header-landing.scss
@@ -4,9 +4,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  box-sizing: border-box;
+  padding-inline: 140px;
   width: 100%;
   height: 70px;
-  padding-inline: 140px;
   background-color: white;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 
