--- a/src/pages/headers-n-footers.scss
+++ b/src/pages/headers-n-footers.scss
@@ -1,8 +1,10 @@
 @import "@variables";
 
 .headers-n-footers {
-  display: grid;
-  grid-gap: 40px;
+  display: flex;
+  gap: 40px;
+  flex-direction: column;
+  align-items: center;
 
   & > .footer {
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
