--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -32,7 +32,11 @@
   }
 
   &__lower-section {
+    display: flex;
     height: 70px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
   }
 
   &__central-section {
