gradient-fill selector transfered to css extensions, created new scss doc for gradient-fill entities only

--- a/src/components/advantage-bar/advantage-bar.pug
+++ b/src/components/advantage-bar/advantage-bar.pug
@@ -4,7 +4,7 @@ mixin advantageBars( items=[] )
   each item in items
     .advantages-block
       .advantages-block__text-bar
-        .advantages-block__icon.gradient-fill
+        .advantages-block__icon
           +materialIcon( item.iconname )
         .advantages-block__text
           span.advantages-block__text__title #{item.title}
