--- a/src/components/buttons/like/like.scss
+++ b/src/components/buttons/like/like.scss
@@ -1,5 +1,6 @@
 @import "@variables";
 @import "../buttons.scss";
+@import "../../../styles/gradient-fill-entities.scss";
 
 .like-button {
   display: flex;
