--- a/src/components/buttons/rate-stars/rate-stars.scss
+++ b/src/components/buttons/rate-stars/rate-stars.scss
@@ -1,5 +1,7 @@
 @import "@variables";
+@import "../../../styles/gradient-fill-entities.scss";
 
 .star-rate {
+  @extend .gradient-fill;
   margin-right: 20px;
 }
