--- a/src/components/input/input.pug
+++ b/src/components/input/input.pug
@@ -20,5 +20,5 @@ mixin inputs( items=[] )
             +materialIcon('expand_more')
           +dropdown( item.dropdown )
         if item.subscription
-          .input-icons.icon-style_subscription.gradient-fill 
+          .input-icons.icon-style_subscription
             +materialIcon('arrow_forward')
