--- a/src/components/advantage-bar/advantage-bar.scss
+++ b/src/components/advantage-bar/advantage-bar.scss
@@ -1,4 +1,5 @@
 @import "@variables";
+@import "../../styles/gradient-fill-entities.scss";
 
 .advantages-block {
   width: 280px;
@@ -9,6 +10,7 @@
   }
 
   &__icon {
+    @extend .gradient-fill;
     position: relative;
     width: 48px;
     height: 48px;
