--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,4 +1,5 @@
 @import "@variables";
+@import "../../styles/gradient-fill-entities.scss";
 
 .input {
   &__text-bar {
@@ -76,5 +77,9 @@
   &_dropdown {
     color: $valhalla;
     opacity: .5;
+  }
+
+  &_subscription {
+    @extend .gradient-fill;
   }
 }
